2008-02-06 Peter Antoniac http://sourceforge.net/users/theseinfeld
	* SVN 538: Documentation problems with newer Doxygen package:
		- Changed Doxygen.in to fit the new standards.
		- Added man pages to the examples for easier packaging.
		- Changed the Release number to 2.0.2 to make it ready
		for the next release.
		- Changes in *.h to fit the new documentation standards.
		- Added Andrew Straw to the list of Authors for his
		contribution to packaging, man pages, etc.

2008-01-15 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 537: Release 2.0.1
	
2008-01-14 David Moore  <dcm@acm.org>
	* SVN 536: Updated NEWS.
	* SVN 535: Removed edge-sense bayer algorithm.  Removed the
		   now-obsolete --without-patents option.

2008-01-12 David Moore  <dcm@acm.org>
	* SVN 534: Fixed some Mac OS compile warnings.
	* SVN 533: Removed internal-only includes from dc1394.h and added
		   missing includes to other source files.

2008-01-09 Peter Antoniac http://sourceforge.net/users/theseinfeld
	* SVN 532: added Doxyfile.in to the Makefile.am EXTRA_DIST for
		inclussion in the packaging.

2008-01-09 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 531: add an option "--without-patents" to the configure script.

2008-01-08 David Moore  <dcm@acm.org>
	* SVN 530: Fix for iSight and other multi-unit cameras on Mac OS X.

2008-01-05 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 529: Update NEWS, README and AUTHORS. Release 2.0.0.

2008-01-04 David Moore  <dcm@acm.org>
	* SVN 528: Fix newlines in some example status messages

2007-12-28 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 527: Update GPL/author statements

2007-12-27 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 526: fix compilation issues with the previous change.
	* SVN 525: Change the name of two utilitary functions that were very
		   confusing:
		   - dc1394_get_color_coding_depth >
			 dc1394_get_color_coding_data_depth
		   - dc1394_get_bits_per_pixel >