@@ -108,7 +108,7 @@ dnl  3. If the interface changes consist solely of additions, increment AGE.
 dnl  4. If the interface has removed or changed elements, set AGE to 0.
 dnl ---------------------------------------------------------------------------
 lt_current=22
-lt_revision=1
+lt_revision=2
 lt_age=0
 
 AC_SUBST(lt_current)
