@@ -1,3 +1,7 @@
+2008-02-07 Damien Douxchamps http://damien.douxchamps.net/
+	* SVN 539: Add linux functions to get port and node. This is
+	           provided by a new header file linux/control.h
+	
 2008-02-06 Peter Antoniac http://sourceforge.net/users/theseinfeld
 	* SVN 538: Documentation problems with newer Doxygen package:
 		- Changed Doxygen.in to fit the new standards.
